test/testdata/functions/builtin/sleep_negative_error.lox
sleep(-1); // error: expected sleep argument (-1) to be non-negative
